@@ -1,5 +1,9 @@
 2008-09-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
+	* t/GtkCellLayoutIface.t
+	* xs/GtkCellLayout.xs: Fix a stack handling bug in
+	Gtk2::CellLayout::get_cells.
+
 	* t/GtkTreeModelIface.t
 	* xs/GtkTreeModel.xs: Fix yet another stack handling bug in
 	Gtk2::TreeModel::get.  Patch by Kevin Ryde.
